--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,9 @@
-fastapi==0.109.2
-uvicorn==0.27.1
+fastapi==0.115.12
+uvicorn==0.34.0
 openai==1.72.0
-python-dotenv==0.19.0
-pydantic==2.6.1
+python-dotenv==1.1.0
+pydantic==2.11.3
+pydantic-settings==2.8.1
 jinja2==3.1.6
-pytest==8.0.0
-httpx==0.26.0
+pytest==8.3.5
+httpx==0.28.1
