--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -11,9 +11,9 @@ jobs:
     runs-on: ubuntu-latest
     env:
       NCP_CONTAINER_REGISTRY: ${{ secrets.NCP_CONTAINER_REGISTRY_URL }}
-      NCP_REPOSITORY_NAME: ${{ secrets.NCP_REPOSITORY_NAME }}
+      #NCP_REPOSITORY_NAME: ${{ secrets.NCP_REPOSITORY_NAME }}
       # 이미지 이름에 브랜치명을 포함하여 다른 배포와 구분합니다.
-      IMAGE_NAME: ${{ secrets.NCP_CONTAINER_REGISTRY_URL }}/${{ secrets.NCP_REPOSITORY_NAME }}/${{ github.event.repository.name }}
+      #IMAGE_NAME: ${{ secrets.NCP_CONTAINER_REGISTRY_URL }}/${{ secrets.NCP_REPOSITORY_NAME }}/${{ github.event.repository.name }}
       IMAGE_TAG: feature-monitor # 이 브랜치 전용 태그 (또는 github.sha 사용 가능)
       # 컨테이너 이름도 다른 배포와 충돌하지 않도록 브랜치명을 포함합니다.
       CONTAINER_NAME: my-app-container-feature-monitor
@@ -22,6 +22,15 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v3
         # 자동으로 push된 브랜치(feature/monitor)의 코드를 체크아웃합니다.
+
+      - name: Set lowercase names
+        run: |
+          echo "LOWERCASE_GITHUB_REPO_NAME=$(echo '${{ github.event.repository.name }}' | tr '[:upper:]' '[:lower:]')" >> $GITHUB_ENV
+            
+
+      - name: Define Image Name
+        run: |
+          echo "IMAGE_NAME=${{ env.NCP_CONTAINER_REGISTRY }}/${{ secrets.NCR_REPOSITORY_NAME }}/${{ env.LOWERCASE_GITHUB_REPO_NAME }}" >> $GITHUB_ENV  
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
