--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -11,7 +11,7 @@ jobs:
     runs-on: ubuntu-latest
     env:
       NCP_CONTAINER_REGISTRY: ${{ secrets.NCP_CONTAINER_REGISTRY_URL }}
-      #NCP_REPOSITORY_NAME: ${{ secrets.NCP_REPOSITORY_NAME }}
+      NCP_REPOSITORY_NAME: ${{ secrets.NCP_REPOSITORY_NAME }}
       # 이미지 이름에 브랜치명을 포함하여 다른 배포와 구분합니다.
       #IMAGE_NAME: ${{ secrets.NCP_CONTAINER_REGISTRY_URL }}/${{ secrets.NCP_REPOSITORY_NAME }}/${{ github.event.repository.name }}
       IMAGE_TAG: feature-monitor # 이 브랜치 전용 태그 (또는 github.sha 사용 가능)
@@ -50,7 +50,7 @@ jobs:
           push: true
           tags: |
             ${{ env.IMAGE_NAME }}:${{ env.IMAGE_TAG }}
-            ${{ env.IMAGE_NAME }}:${{ env.IMAGE_TAG }}-${{ github.sha }} # Commit SHA로도 태깅
+            ${{ env.IMAGE_NAME }}:${{ env.IMAGE_TAG }}-${{ github.sha }} 
 
       - name: Deploy to NCP Server (feature-monitor)
         uses: appleboy/ssh-action@master
@@ -71,7 +71,7 @@ jobs:
             docker rm ${{ env.CONTAINER_NAME }} || true
               
             echo "Running new feature/monitor container..."
-            # feature/monitor 브랜치 배포용 포트, 환경변수 등을 다르게 설정할 수 있습니다.
+          # feature/monitor 브랜치 배포용 포트, 환경변수 등을 다르게 설정할 수 있습니다.
             # 예: 다른 포트(8081) 사용, 개발 환경 변수 설정
             docker run -d -p 8081:3000 --name ${{ env.CONTAINER_NAME }} \
               -e NODE_ENV=development \
