--- a/.github/workflows/deploy-gcp.yml
+++ b/.github/workflows/deploy-gcp.yml
@@ -1,3 +1,12 @@
+name: Deploy to GCP
+
+on:
+  push:
+    branches:
+      - main  # main 브랜치에 푸시될 때 실행
+      - feature/deploy-gcp
+  workflow_dispatch:  # 수동 실행도 가능하게 함
+
 jobs:
   deploy:
     runs-on: ubuntu-latest
@@ -24,7 +33,7 @@ jobs:
         
     - uses: 'google-github-actions/auth@v2'
       with:
-        project_id: 'just3lines'
+        project_id: ${{ env.PROJECT_ID }}
         workload_identity_provider: 'projects/772476664444/locations/global/workloadIdentityPools/j3l-pool-id/providers/j3l-github-auth'
 
     - name: Configure Docker for Artifact Registry
