--- a/.github/workflows/deploy-gcp.yml
+++ b/.github/workflows/deploy-gcp.yml
@@ -13,7 +13,7 @@ jobs:
 
     permissions:
       contents: 'read'
-      id-token: 'write'
+      id-token: 'write'  # OIDC 토큰 발급을 위한 권한
       
     env:
       PROJECT_ID: 'just3lines'
@@ -26,16 +26,24 @@ jobs:
     - name: 'Checkout repository'
       uses: 'actions/checkout@v4'
 
+    - id: 'auth'
+      name: 'Authenticate to Google Cloud'
+      uses: 'google-github-actions/auth@v2'
+      with:
+        token_format: 'access_token'
+        project_id: ${{ env.PROJECT_ID }}
+        workload_identity_provider: 'projects/772476664444/locations/global/workloadIdentityPools/j3l-pool-id/providers/j3l-github-auth'
+        service_account: 'just3lines-github@just3lines.iam.gserviceaccount.com'
+
     - name: 'Set up Cloud SDK'
       uses: 'google-github-actions/setup-gcloud@v2'
       with:
         version: '>= 363.0.0'
         
-    - uses: 'google-github-actions/auth@v2'
-      with:
-        project_id: ${{ env.PROJECT_ID }}
-        workload_identity_provider: 'projects/772476664444/locations/global/workloadIdentityPools/j3l-pool-id/providers/j3l-github-auth'
-        service_account: 'just3lines-github@just3lines.iam.gserviceaccount.com'
+    - name: 'Use gcloud CLI'
+      run: |
+        gcloud info
+        gcloud auth list
 
     - name: Configure Docker for Artifact Registry
       run: |
