--- a/.github/workflows/deploy-gcp.yml
+++ b/.github/workflows/deploy-gcp.yml
@@ -21,6 +21,7 @@ jobs:
       REPO_NAME: 'j3l-docker-registry'  # Artifact Registry 저장소 이름
       IMAGE: 'just3lines-api'
       IMAGE_TAG: ${{ github.sha }}
+      SERVICE_NAME: 'just3lines'  # Cloud Run 서비스 이름
 
     steps:
     - name: 'Checkout repository'
@@ -61,3 +62,24 @@ jobs:
         docker tag ${{ env.REGION }}-docker.pkg.dev/${{ env.PROJECT_ID }}/${{ env.REPO_NAME }}/${{ env.IMAGE }}:${{ env.IMAGE_TAG }} \
           ${{ env.REGION }}-docker.pkg.dev/${{ env.PROJECT_ID }}/${{ env.REPO_NAME }}/${{ env.IMAGE }}:latest
         docker push ${{ env.REGION }}-docker.pkg.dev/${{ env.PROJECT_ID }}/${{ env.REPO_NAME }}/${{ env.IMAGE }}:latest
+        
+    - name: Deploy to Cloud Run
+      id: deploy
+      uses: google-github-actions/deploy-cloudrun@v2
+      with:
+        service: ${{ env.SERVICE_NAME }}
+        region: ${{ env.REGION }}
+        image: ${{ env.REGION }}-docker.pkg.dev/${{ env.PROJECT_ID }}/${{ env.REPO_NAME }}/${{ env.IMAGE }}:${{ env.IMAGE_TAG }}
+        flags: |
+          --allow-unauthenticated
+          --port=8000
+          --memory=512Mi
+          --cpu=1
+          --min-instances=0
+          --max-instances=10
+          --concurrency=80
+          --set-env-vars=OPENAI_API_KEY=${{ secrets.OPENAI_API_KEY }}
+    
+    - name: Show Cloud Run URL
+      run: |
+        echo "Cloud Run URL: ${{ steps.deploy.outputs.url }}"
