--- a/.github/workflows/deploy-gcp.yml
+++ b/.github/workflows/deploy-gcp.yml
@@ -17,7 +17,8 @@ jobs:
       
     env:
       PROJECT_ID: 'just3lines'
-      REGION: 'asia-northeast3'  # GCP 리전 (서울)
+      REGION_KR: 'asia-northeast3'  # GCP 리전 (서울)
+      REGION_JP: 'asia-northeast1-a'  # GCP 리전 (도쿄)
       REPO_NAME: 'j3l-docker-registry'  # Artifact Registry 저장소 이름
       IMAGE: 'just3lines-api'
       IMAGE_TAG: ${{ github.sha }}
@@ -48,28 +49,28 @@ jobs:
 
     - name: Configure Docker for Artifact Registry
       run: |
-        gcloud auth configure-docker ${{ env.REGION }}-docker.pkg.dev
+        gcloud auth configure-docker ${{ env.REGION_KR }}-docker.pkg.dev
 
     - name: Build Docker image
       run: |
-        docker build -t ${{ env.REGION }}-docker.pkg.dev/${{ env.PROJECT_ID }}/${{ env.REPO_NAME }}/${{ env.IMAGE }}:${{ env.IMAGE_TAG }} .
+        docker build -t ${{ env.REGION_KR }}-docker.pkg.dev/${{ env.PROJECT_ID }}/${{ env.REPO_NAME }}/${{ env.IMAGE }}:${{ env.IMAGE_TAG }} .
     
     - name: Push Docker image to Artifact Registry
       run: |
-        docker push ${{ env.REGION }}-docker.pkg.dev/${{ env.PROJECT_ID }}/${{ env.REPO_NAME }}/${{ env.IMAGE }}:${{ env.IMAGE_TAG }}
+        docker push ${{ env.REGION_KR }}-docker.pkg.dev/${{ env.PROJECT_ID }}/${{ env.REPO_NAME }}/${{ env.IMAGE }}:${{ env.IMAGE_TAG }}
         
         # 최신 태그도 추가
-        docker tag ${{ env.REGION }}-docker.pkg.dev/${{ env.PROJECT_ID }}/${{ env.REPO_NAME }}/${{ env.IMAGE }}:${{ env.IMAGE_TAG }} \
-          ${{ env.REGION }}-docker.pkg.dev/${{ env.PROJECT_ID }}/${{ env.REPO_NAME }}/${{ env.IMAGE }}:latest
-        docker push ${{ env.REGION }}-docker.pkg.dev/${{ env.PROJECT_ID }}/${{ env.REPO_NAME }}/${{ env.IMAGE }}:latest
+        docker tag ${{ env.REGION_KR }}-docker.pkg.dev/${{ env.PROJECT_ID }}/${{ env.REPO_NAME }}/${{ env.IMAGE }}:${{ env.IMAGE_TAG }} \
+          ${{ env.REGION_KR }}-docker.pkg.dev/${{ env.PROJECT_ID }}/${{ env.REPO_NAME }}/${{ env.IMAGE }}:latest
+        docker push ${{ env.REGION_KR }}-docker.pkg.dev/${{ env.PROJECT_ID }}/${{ env.REPO_NAME }}/${{ env.IMAGE }}:latest
         
     - name: Deploy to Cloud Run
       id: deploy
       uses: google-github-actions/deploy-cloudrun@v2
       with:
         service: ${{ env.SERVICE_NAME }}
-        region: ${{ env.REGION }}
-        image: ${{ env.REGION }}-docker.pkg.dev/${{ env.PROJECT_ID }}/${{ env.REPO_NAME }}/${{ env.IMAGE }}:${{ env.IMAGE_TAG }}
+        region: ${{ env.REGION_JP }}
+        image: ${{ env.REGION_KR }}-docker.pkg.dev/${{ env.PROJECT_ID }}/${{ env.REPO_NAME }}/${{ env.IMAGE }}:${{ env.IMAGE_TAG }}
         flags: |
           --allow-unauthenticated
           --port=8000
