Test: open ai API 사용하기

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -66,9 +66,15 @@ jobs:
             docker stop ${{ env.CONTAINER_NAME }} || true
             docker rm ${{ env.CONTAINER_NAME }} || true
             
+            
+            echo "Creating .env file on the server: ~/${{ env.ENV_FILE_NAME }}"
+            echo "OPENAI_API_KEY=${{ secrets.OPENAI_API_KEY }}" > ~/${{ env.ENV_FILE_NAME }}
+            
+            
             echo "Running new feature/monitor container..."
             
             docker run -d -p 8082:8000 --name ${{ env.CONTAINER_NAME }} \
+              --env-file ~/${{ env.ENV_FILE_NAME }} \
               -e NODE_ENV=development \
               -e BRANCH_NAME=feature-monitor \
               ${{ env.IMAGE_NAME }}:${{ env.IMAGE_TAG }}
